# algotrader-v1

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  task.md
docs/: OPERATOR_RUNBOOK.md  alpaca_paper_integration_plan.md  deterministic_core.md  project_checkpoint.md
scripts/: build_crypto_tournament_v2_bounded_paper_probe_lifecycle_plan.ps1  build_exact_paper_cancellation_reconciliation_readiness.py  consume_crypto_observation_receipt.ps1  launch_v536_credential_provisioning.py  provision_v536_windows_credential.ps1  refresh_crypto_paper_bars.ps1  refresh_multi_symbol_crypto_history.ps1  refresh_spy_adjusted_data.ps1  register_crypto_tournament_v2_oos_scheduler_task.ps1  replay_crypto_tournament_v2_bounded_paper_probe_review.ps1  run_crypto_bounded_probe_independent_flat_operator.ps1  run_crypto_no_submit_operating_cycle.ps1  run_crypto_paper_account_cleanup.ps1  run_crypto_paper_autonomy_cadence.ps1  run_crypto_paper_broker_observation.ps1  run_crypto_paper_certification_ingestion.ps1  run_crypto_paper_fill_exit_certification.ps1  run_crypto_paper_fill_exit_ingestion.ps1  run_crypto_paper_mutation_drill.ps1  run_crypto_paper_oms_dry_run.ps1  run_crypto_paper_oms_handoff.ps1  run_crypto_paper_submit_approval_packet.ps1  run_crypto_paper_submit_cancel_certification.ps1  run_crypto_paper_visibility_cycle.ps1  run_crypto_preregistered_tournament.ps1  run_crypto_qty_sizing_preview.ps1  run_crypto_repair_forward_oos_accrual.ps1  run_crypto_research_pipeline.ps1  run_crypto_router_input_refresh_packet.ps1  run_crypto_supervised_readiness_trial.ps1  (+48 more)
tests/: conftest.py  (+2 more)
(+1083 files in other folders)
