[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algotrader"
version = "0.1.0"
description = "Deterministic paper-trading core."
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43,<0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
algotrader = "algotrader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
